js to increase and decrease temperature works

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <h2>TEMPERATURE</h2>
             <div class= "remote-control-box">
             <div class="temperature-buttons">
-                <button  class="up-button">⬆️</button>
-                <button  class="down-button">⬇️</button>
+                <button  class="up-button" id="weather-up">⬆️</button>
+                <button  class="down-button" id="weather-down">⬇️</button>
                 </div>
-                <input class="temperature-digit"  id="temp-number" value="45" readonly></input></div>
+                <input class="temperature-digit" id="temperature" value="45" readonly></input></div>
 
         </section>
     
@@ -47,6 +47,7 @@
         <br><br><br><br>
         <div id="earth">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
         </div></section>
-
+        <script src="./src/index.js">
+        </script>
     </body>
 </html>
