--- a/index.html
+++ b/index.html
@@ -5,8 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
-</head>
+    <link href="styles/index.css" rel="stylesheet" type="text/css"/>
+    <link id="vibe" href="styles/vibe2.css" rel="stylesheet" type="text/css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fuzzy+Bubbles:wght@700&family=Gwendolyn:wght@700&display=swap" rel="stylesheet"></head>
 <body>
-    
+    <header>
+        <h1>☀️ My Weather Report ⛈ </h1>
+    </header>
+    <section>
+        <h2>Input your location and vibes to receive your personalized weather report</h2>
+    </section>
+    <section>
+        <!-- Series of inputs/buttons -->
+        <h3>Tell me a lil about yourself plz🧞</h3>
+        <form>
+            <label for="fname">Your first name:</label>
+            <input type="text" id="fname" name="fname"><br><br>
+            <label for="location">Location:</label>
+            <input type="text" id="location" name="location"><br><br>
+        </form>
+    </section>
+    <section>
+        <h3>🔥 What's the temp, babes? ❄️</h3>
+        <h2 id="temperature">68℉</h2>
+        <button id="plusButton">➕</button>
+        <button id="minusButton">➖</button>
+        <label class="switch" id="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+        </label>
+        <p>Change to celsius</p>
+    </section>
+    <section id="landscapeContainer">
+    </section>
+    <section>
+        <select name="sky" id="skySelect">
+            <option value="">Select a sky</option>
+            <option value="sunny">Sunny</option>
+            <option value="cloudy">Cloudy</option>
+            <option value="rainy">Rainy</option>
+            <option value="snowy">Snowy</option>
+        </select>
+    </section>
+    <section>
+        <form id="submitButton">
+            <input type="button" value="LET'S GET IT!👌🏾"><br><br>
+        </form>
+    <footer>
+        <button id="left">👈🏼</button>
+        <p id="vibeName"></p>
+        <button id="right">👉🏼</button>
+        <p>✨Change your aesthetic✨</p>
+    </footer>
+    </section>
+    <script src="src/index.js">
+    </script>
 </body>
 </html>
