adds html outline/skeleton

--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Report</title>
+    <title>SoCal Weather Report</title>
 </head>
 <body>
+    <section>
+        <h1>☀️SoCal Weather🌬 Report🌦</h1>
+    </section>
+    <section>
+        <select name="locations" id="locations">
+            <optgroup label="SoCal Locations">
+                <option value="santa monica">Santa Monica</option>
+                <option value="disneyland">Disneyland</option>
+            </optgroup>
+        </select>
+    </section>
+    <section id="temperature">
+        <h2>temperature</h2>
+        <p id="degreesFahrenheit">72°</p>
+        <button id="colderButton">colder</button>
+        <button id="niceDayButton">nice day</button>
+        <button id="hotterButton">hotter</button>
+    </section>
+    <section id="landscape">
+        <h2>put landscape here</h2>
+    </section>
     
 </body>
 </html>
