Creates sky-changing logic for sky-block and weather-garden-block

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <main class="container">
         <header id="banner">
             <h1>Weather Report
-                <span id="banner-city-of"><h3>the city of <span id="banner-city-name">Seattle</span></h3></span>
+                <span id="banner-city-of">
+                    <h3>the city of <span id="banner-city-name">Seattle</span></h3>
+                </span>
             </h1>
         </header>
 
         <!--TEMPERATURE BLOCK-->
         <section id="temperature-block">
-            <h2 class="headings">Temperature</h2>
+            <h2 class="heading-temp">Temperature</h2>
             <h2 id="temp">64</h2>
             <button id="up-arrow-button"><h2 class="arrow" id="up-arrow"></h2></button>
             <button id="down-arrow-button"><h2 class="arrow" id="down-arrow"></h2></button>
@@ -27,10 +29,10 @@
         <!--SKY BLOCK-->
         <section id="sky-block">
             <h2 class="headings">Sky</h2>
-            <select name="sky">
-                <option value="sunny">Sunny</option>
-                <option value="cloudy">Cloudy</option>
+            <select id="sky">
                 <option value="rainy">Rainy</option>
+                <option value="cloudy">Cloudy</option>
+                <option value="sunny">Sunny</option>
                 <option value="snow">Snow</option>
             </select>
         </section>
@@ -38,15 +40,15 @@
         <!--CITY BLOCK-->
         <section id="city-name-block">
             <h2 class="headings">City Name</h2>
-            <input type="text">
+            <input type="text"><button>Reset</button>
             <!--reset button-->
         </section>
 
         <!--WEATHER GARDEN BLOCK-->
         <section id="weather-garden-block">
             <h2>Weather Garden</h2>
-            <h2 id="sky-landscape">🌧🌈⛈🌧🌧💧⛈🌧🌦🌧💧🌧🌧</h2>
-            <h2 id="ground-landscape">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</h2>
+            <h2 id="sky-landscape">🌧⛈🌧🌧⛈🌧🌧🌧🌧</h2>
+            <h2 id="ground-landscape">🌻🌷🌳🌱🌲🌱🌳🌷🌻</h2>
         </section>
 
         <script src="src/index.js"></script>
