Creates city name changing logic for banner

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         <!--CITY BLOCK-->
         <section id="city-name-block">
             <h2 class="headings">City Name</h2>
-            <input type="text"><button>Reset</button>
-            <!--reset button-->
+            <input id="city-name" type="text"><button>Reset</button>
         </section>
 
         <!--WEATHER GARDEN BLOCK-->
