refactor playground / landscape; add colors to temp gauge

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <body>
     <main id = "main-section">
     </main>
+    <section id = "playground">
+        <div id= "landscape" class = "round">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
+    </section>
 
     <section id = "temp-container" class = "frosted round">
         <button class = "temp-gauge round" id = "decTemp">←</button>
-        <section class = "temp-gauge round" id = "temperature" contenteditable = "true">93</section>
+        <section class = "temp-gauge round" id = "temperature" contenteditable = "true">75</section>
         <button class = "temp-gauge round" id = "incTemp">→</button>
     </section>
 
