--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!--CITY BLOCK-->
         <section id="city-name-block">
             <h2 class="headings">City Name</h2>
-            <input id="city-name" type="text"><button>Reset</button>
+            <input id="city-name" type="text"><button id="reset">Reset</button>
         </section>
 
         <!--WEATHER GARDEN BLOCK-->
