squash bug where landscape wasn't updating

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main id = "main-section">
     </main>
     <section id = "playground">
-        <div id= "landscape" class = "round">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
+        <div id= "landscape" class = "round Morning">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
     </section>
 
     <section id = "temp-container" class = "frosted round">
