Finished enough to submit.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <!--WEATHER GARDEN BLOCK-->
         <section id="weather-garden-block">
             <h2>Weather Garden</h2>
-            <h2 id="sky-landscape">🌧⛈🌧🌧⛈🌧🌧🌧🌧</h2>
-            <h2 id="ground-landscape">🌻🌷🌳🌱🌲🌱🌳🌷🌻</h2>
+            <h4 id="sky-landscape">🌧⛈🌧</h4>
+            <h4 id="ground-landscape">🌲🌳🌻</h4>
         </section>
 
         <script src="src/index.js"></script>
