add day of the week to temperature container

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <span>▶</span>
 
             <div>65</div>
+            <p><span id='date-time'></span></p>
         </section>
         <section id="sky-container">
             <h2>Sky</h2>
