index html organized

--- a/index.html
+++ b/index.html
@@ -7,6 +7,78 @@
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <div class = 'Header'>
+        <h1>Weather Report</h1>
+        <div class ='Sub header'>
+            <p>for the lovely city of</p>
+        </div>
+        <div class ='Mutable sub header'>
+            <p>My Hometown</p>
+        </div>
+    </div>
+    <section class ='Mutable Components'>
+        <div class ='Temperature Changer'>
+            <div class ='Temperature Title'>
+                <p>Temperature</p>
+            </div>
+            <div class ='Arrow keys'>
+                <div class ='Upper Arrow'>
+                </div>
+                <div class ='Lower Arrow'>
+                </div>
+            </div>
+            <div class = 'Temperature Display'>
+            </div>
+        </div>
+        <div class ='Sky Changer'>
+            <div class='Sky Title'>
+                <p>Sky</p>
+            </div>
+            <div class ='Dropdown Menu'>
+            </div>
+        </div>
+        <div class ='Hometown Changer'>
+            <div class ='Display Text'>
+                <p>City Name</p>
+            </div>
+            <div class ='Type Field'>
+            </div>
+            <div class ='Button'>
+            </div>
+        </div>
+    </section>
+    <div class ='Visual Component'>
+        <div class='Immutable Title'>
+            <p>Weather Garden</p>
+        </div>
+        <div class='Background'>
+            <div class='Top Display'>
+            </div>
+            <div class='Bottom Display'>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
+<!-- Body
+Header
+    immutable sub header
+    mutable sub header
+Mutable Components
+    Temperature Changer
+        Arrow keys
+            Top Arrow
+            Bottom Arrow
+        Temperature Display
+    Sky Changer
+        Dropdown menu
+    Hometown Changer
+        Display text
+        Type field (links to mutable sub header)
+        Reset Button
+Visual Component
+    Immutable Title
+    Image
+        Top line display (mutable, links to sky changer)
+        Bottom line display (mutable, links to temperature)-->
