--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <script src="src/index.js"></script>
     <section id="titleGreeting">
-        <h1>Weather Report </h1>
+        <h1>Weather Report  </h1>
         <h2> for the happy town of </h2>
-        <span id ="headerCityName"></span>
+        <span id ="headerCityName"> ChewAndSwallow</span>
     </section>
     <section id="changeCityName">
         <h1> Change City Name</h1>
