--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             <h2>Layout</h2>
             <div id="layout-image"><img src="assets/images/layout_sunny1.jpeg" height="170px" width="170px" alt="sunset"></div>
         </section>
+
     </main>
+	<footer>
+        <p>Copyright © 2021</p>
+    </footer>
     <script src="src/index.js"></script>
 </body>
 </html>
