--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Report</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Connecting HTML, CSS, and JS Demo</title>
+    <link href="styles/index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <div class="container">
+        <div class="header_block">
+            <span class="header_h1"> Weather Report </span><span>For the lovely city of </span> <span id="city-name">City Name</span> 
+        </div>
     
+        <div class="temperature bg_br">
+            <h2>Temperature</h2>
+            <div class="temperature_content">
+                <div class="temp_buttons">
+                    <button>up </button>
+                    <button>down </button>
+                </div>
+                <div class="temp_reading">32</div>
+            </div>
+        </div>
+        <div class="sky bg_br">
+            <h2>Sky</h2>
+            <div class="card-body">
+                <label for="sky">Choose a sky:</label>
+                <select id="sky" name="sky">
+                    <option value="rainy">Rainy</option>
+                    <option value="suny">Suny</option>
+                    <option value="snowy">Snowy</option>
+                    <option value="cloudy">Cloudy</option>
+                </select>
+                
+            </div>
+        </div>
+        <div class="city bg_br">
+            <h2>City Name</h2>
+            <div class="card-body">
+                <input placeholder="City name"/>
+            </div>
+        </div>
+
+        <div class="weather ">
+            <h2>Weather Garden</h2>
+            <div class="weather_content ">
+                <div class="weather_sky">for the sky</div>
+                <div class="weather_garden">for the garden</div>
+            </div>
+        </div>
+    </div>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
