dynamic sky select function done

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="sky bg_br">
             <h2>Sky</h2>
             <div class="card-body">
-                <label for="sky_condition">Choose a sky:</label>
-                <select id="sky_condition" name="sky">
+                <select id="sky_condition" name="sky" required>
+                    <option value="choose one" selected>Choose a sky</option>
                     <option value="rainy">Rainy</option>
-                    <option value="suny">Sunny</option>
+                    <option value="sunny">Sunny</option>
                     <option value="snowy">Snowy</option>
                     <option value="cloudy">Cloudy</option>
                 </select>
