dynamic sky select function done

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div class="weather ">
             <h2>Weather Garden</h2>
             <div class="weather_content ">
-                <div class="weather_sky">🌧🌈⛈🌧🌧💧⛈🌧🌦🌧💧🌧🌧"</div>
-                <div class="weather_garden">"🌵__🐍_🦂_🌵🌵__🐍_🏜_🦂"</div>
+                <div class="weather_sky">🌨❄️🌨🌨❄️❄️🌨❄️🌨❄️❄️🌨🌨</div>
+                <div class="weather_garden">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</div>
             </div>
         </div>
     </div>
