--- a/index.html
+++ b/index.html
@@ -6,44 +6,50 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Weather Report</title>
         <link href="styles/index.css" rel="stylesheet" />
-        <script src="src/index.js" type="text/javascript"></script>
     </head>
     <body>
         <div class="container">
-
-            <!-- Main/top section-->
-            <div id="title">
+            <!-- Main section-->
+            <main>
                 <h1>Weather Report</h1>
-                <h3>For the lovely city of {city name here}</h3>
-            </div>
+                <h3>Location:</h3>
+            </main>
 
-            <!-- snacks section-->
-            <div id="snacks">
-                <h4>Yummy foods to eat in this weather</h4>
-            </div>
+            <!-- Emoji section-->
+            <section class="emoji-section">
+                <div id="sky-container">Choose a sky option below</div>
+                <div id="snack-option-emojis">🍓🍆 🌽 🥭 🍒 🍉</div>
+                <div id="temp-option-emojis">Change the temperature to see changes in the emojis</div>
+            </section>
+            <script src="scripts/index.js" ></script>
         
-            <!-- Temperature section -->
-            <div class="temperature-area">
+            <!-- Temperature selection section -->
+            <section class="temperature-section">
                 <h3 id="temperature-heading">Temperature</h3>
                 <div id="increase-temp">↑</div>
                 <div id="decrease-temp">↓</div>
                 <div id="current-temp">75</div>
-            </div>
-
+            </section>
+            
+            <!-- Sky drop-down section -->
             <div class="sky-area">
                 <h3 id="sky-heading">Sky</h3>
-                <div id="drop-down">Dropdown here</div>
+                <select id="drop-down">
+                    <option>Choose one...</option>
+                    <option>Sunny</option>
+                    <option>Cloudy</option>
+                    <option>Rainy</option>
+                    <option>Snowy</option>
+                    <option>It's raining cats and dogs!</option>
+                </select>
             </div>
 
+            <!-- City section -->
             <div class="city-area">
                 <h3 id="city-heading">City</h3>
                 <div id="city-search">Search bar here</div>
             </div>
-
-        <!-- Footer-->
-        <!-- <footer>
-            <h4>Get in touch:</h4>&nbsp;<a href="mailto:mcbride.rac@gmail.com"> Email</a>&nbsp;|&nbsp;<a href="https://www.linkedin.com/in/racmcbride/" target="_blank">LinkedIn</a>
-        </footer> -->
         </div>
-      </body>
+        <script src="src/index.js" type="text/javascript"></script>
+    </body>
 </html>
