Adds emoji-change with temperature-change functionality; when you change the temperature, the emojis in the emoji section change accordingly

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <!-- Emoji section-->
             <section class="emoji-section">
                 <div id="sky-container">Choose a sky option below</div>
-                <div id="snack-option-emojis">🍓🍆 🌽 🥭 🍒 🍉</div>
-                <div id="temp-option-emojis">Change the temperature to see changes in the emojis</div>
+                <div id="produce-container">🍓🍆 🌽 🥭 🍒 🍉</div>
+                <div id="plant-container">Change the temperature to see changes in the emojis</div>
             </section>
             <script src="scripts/index.js" ></script>
         
