remove editability of temp:

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section id = "temp-container" class = "frosted round">
         <button class = "temp-gauge round" id = "decTemp">←</button>
-        <section class = "temp-gauge round" id = "temperature" contenteditable = "true">75</section>
+        <section class = "temp-gauge round" id = "temperature">75</section>
         <button class = "temp-gauge round" id = "incTemp">→</button>
     </section>
 
