--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="sky-container" class="background">
             <h2>Sky</h2>
             <img src="assets/images/sky_clipart3.png" alt="cloudy clipart" width="170px" height="170px">
-            <select>
+            <select id="selectSky">
                 <option value="sunny">Sunny</option>
                 <option value="cloudy">Cloudy</option>
                 <option value="rainy">Rainy</option>
