added city input functionality

--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
         <header>
             <h1>Weather Report From the City of Your Choice</h1>
             <p>Currently showing the weather in:</p>
-            <p>Catalina Island</p>
+            <p id="city-header">Catalina Island</p>
         </header>
         <section class="temp-container">
             <h3>Temperature</h3>
             <div class="temp-controls">
                 <h5>Increase or Decrease the Temperature:</h5>
+                <span id="temp-display">70</span>
+                <div>
                 <button id="increase-temp">Increase</button>
                 <button id="decrease-temp">Decrease</button>
-                <span id="temp-display">70</span>
+                </div>
             </div>
         </section>
         <section class="sky-container">
