--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Report</title>
+    <link rel="stylesheet" href="../styles/index.css"/>
+    <title>Rhyannon's Weather Report</title>
 </head>
 <body>
     <section>
         <h1>Weather Report</h1>
     </section>
+    <script src="../src/index.js"></script>/>
 </body>
 </html>
