wireframe first commit

--- a/index.html
+++ b/index.html
@@ -5,8 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet">
 </head>
-<body>
-    
+<body id="main">
+    <header class="col-12" >
+        <div>
+            <h1>Weather Report </h1>
+                <p style="float:left">For the lovely city of ✨	</p>
+                <span style="float:right">city  ✨</span>
+        </div>
+
+        <!-- <img src="assets/sky.jpeg" alt="background_sky"> -->
+    </header>
+    <div>
+        <!-- <section id="change-temp">
+            </div>
+            <ul id="temp-adjust" class="group">
+              <li>🔼;</li>
+              <li>&#x25BC;</li>
+            </ul>
+        </section> -->
+        <!-- <section>
+            <div class="select-sky" style="width:200px;">
+                <select>
+                  <option value="0">Select sky:</option>
+                  <option value="1">Sunny</option>
+                  <option value="2">Rainy</option>
+                  <option value="3">Cloudy</option>
+                  <option value="4">Snowy</option>
+                </select>
+              </div>
+        </section> -->
+        <section>
+            <div class="col-4 " style="width:400px;">
+                <select class="select-sky">
+                    <option value="0">Today is:</option>
+                    <option value="1">Sunny</option>
+                    <option value="2">Rainy</option>
+                    <option value="3">Cloudy</option>
+                    <option value="4">Snowy</option>
+                </select>
+            </div>
+        </section>
+            <div class="col-3 city-input"><label style="color:white">City:</label>
+            <input type="text" id="input-city" required minlength="4" maxlength="15" size="20">
+            <button onclick="resetCity()">clear</button>
+            </div>
+
+        <section class= "col-3" id="temp-display">
+          <span > <!--76&deg;-->
+            <span style="font-size: 3rem;"> 🔼  </span>
+            <span id="current-temp">76&deg; </span>
+            <span id="temp-adjust"> 🔽 </span>
+          </span>  
+        </section>
+    </div>
+    <div>
+    <footer class="col-12" id="footer">
+        <div class="footer-text"><p>&copy; Eunice Gonzalez Regis 2021</p></div>
+    </footer>
+    </div>
+    <script src="src/index.js" type="text/javascript"></script>
 </body>
+
 </html>
