--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="../styles/index.css"/>
     <title>Rhyannon's Weather Report</title>
 </head>
 <body>
-    <section>
-        <h1>Weather Report</h1>
-    </section>
-    <script src="../src/index.js"></script>/>
+    
+
+    <script src="../src/index.js"></script>
 </body>
 </html>
