--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <title>Rhyannon's Weather Report</title>
 </head>
 <body>
-    
+    <div class="location">
+        <h1 class="location-timezone">Timezone</h1>
+        <p>Icon</p>
+    </div>
+    <div class="temperature">
+        <h2 class="temperature-degree">34</h2>
+        <div class="temperature-description">Chilly Willy</div>
+    </div>
 
     <script src="../src/index.js"></script>
 </body>
