--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <!-- Main section-->
             <main>
                 <h1>Weather Report</h1>
-                <h3>Location:</h3>
+                <h3>Location:&nbsp<span id="city-name">Philadelphia</span></h3>
             </main>
 
             <!-- Emoji section-->
@@ -32,7 +32,7 @@
             </section>
             
             <!-- Sky drop-down section -->
-            <div class="sky-area">
+            <section class="sky-area">
                 <h3 id="sky-heading">Sky</h3>
                 <select id="drop-down">
                     <option>Choose one...</option>
@@ -42,13 +42,15 @@
                     <option>Snowy</option>
                     <option>It's raining cats and dogs!</option>
                 </select>
-            </div>
+            </section>
 
             <!-- City section -->
-            <div class="city-area">
+            <section class="city-area">
                 <h3 id="city-heading">City</h3>
-                <div id="city-search">Search bar here</div>
-            </div>
+                <label for="city-search" id="city-search-label">Type in your city below</label>
+                <input type="text" id="city-search-input" value="Philadelphia" minlength="4" maxlength="20" size="10"/>
+                <button id="resetButton">Reset</button>
+            </section>
         </div>
         <script src="src/index.js" type="text/javascript"></script>
     </body>
