--- a/index.html
+++ b/index.html
@@ -17,15 +17,20 @@
     </section>
     <section id="changeCityName">
         <h1> Change City Name</h1>
+        <button id="Reset">Reset</button>
+        <input id="inputCityName" value="Your City Name" />
     </section>
     <section id="tempAdjuster">
         <h1> Adjust Thermostat</h1>
+        <button id="arrowUp">Arrow Up⏫</button>
+        <button id="arrowDown">Arrow Down⏬</button>
+        <h1 id="tempNum"> 79</h1>
     </section>
     
     <section id ="skySection">
         <h1> Change the Sky</h1>
         <div class="pickerWindow">
-        <button id="clickMeBtn">ClickMe</button>
+        
         <select id = "skySelect">
             <option>Sunny</option>
             <option>Cloudy</option>
