add input event to city box, reset button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1>Weather Report</h1>
-    <p>For the lovely city of <span id="city">Seattle</span></p>
+    <p>For the lovely city of <span id="city"></span></p>
 
     <section id="weather-garden">
         <h2>Weather Garden</h2>
@@ -48,7 +48,7 @@
 
         <section id="set-city-box">
             <h2>City Name</h2>
-            <input id="set-city"type="text">
+            <input id="set-city" type="text">
             <button class="button" id="reset-city">Reset</button>
         </section>
         
