Added increase+descrease buttons, no functionality

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <span>F</span>
     </div>
         <div class="temperature-description">Chilly Willy</div>
+        <button id="Increase-Temperature" type="button">Increase Temperature</button>
+        <button id="Decrease-Temperature" type="button">Decrease Temperature</button>
     </div>
 
     <script src="../src/index.js"></script>
