added reset button functionality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h3>Temperature</h3>
             <div class="temp-controls">
                 <h5>Increase or Decrease the Temperature:</h5>
-                <span id="temp-display">70</span>
+                <span class="orange" id="temp-display">70</span>
                 <div>
                 <button id="increase-temp">Increase</button>
                 <button id="decrease-temp">Decrease</button>
@@ -37,9 +37,9 @@
         </section>
         <section class="garden-container">
             <h3>Weather Garden</h3>
-            <div id="garden-container" class="gardenContainer">
-                <div id="sky-garden"></div>
-                <div id="landscape"></div>
+            <div id="garden-container">
+                <div id="sky-garden">☀️ ☀️ ☀️ ☀️ ☀️ ☀️ ☀️</div>
+                <div id="landscape">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
             </div>
         </section>
         <section class="city-name-container">
