rename src to scripts, add js code to add new elements to temp display. Some working code

--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
         <p>For the lovely city of </p>
     </header>
     <nav class="nav">
-        <ul>
-            <li id="temp" class="deets">
-                <p class="text">Temperature</p>
-                <section>
-                    <p class="temp-text">Temperature</p>
-                </section>
+        <ul class="ul-container">
+            <li id="temp" class="temp-deets">
+                <h2 class="text">Temperature</h2>
+                <div class="emoji-holder"></div>
             </li>
             <li id="sky" class="deets">
-                <p class="text">Sky</p>
+                <h2 class="text">Sky</h2>
             </li>
             <li id="city" class="deets">
-                <p class="text">City Name</p>
+                <h2 class="text">City</h2>
             </li>
         </ul>
     </nav>
