--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;400;600;700&family=Syncopate:wght@400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="../styles/index.css"/>
     <title>Rhyannon's Weather Report</title>
 </head>
@@ -20,6 +23,9 @@
         <div class="temperature-description">Chilly Willy</div>
         <button id="Increase-Temperature" type="button">Increase Temperature</button>
         <button id="Decrease-Temperature" type="button">Decrease Temperature</button>
+    </div>
+    <div>
+
     </div>
 
     <script src="../src/index.js"></script>
