added js + html code to update city name as user types into text input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <section>
-        <h1>Weather Report for</h1>
+        <h1>Weather Report For</h1>
+        <h2 id= "cityDisplay">this city</h2>
     </section>
 
     <section class="tempDefault">
@@ -31,8 +32,8 @@
 
     <section>
         <h2>Which city?</h2>
-        <label for="cityName">City Name</label>
-        <input type="text" name="cityName" required minlength ="1" maxlength= "50">
+        <label for="city">City Name</label>
+        <input placeholder= "Enter city name" name="city">
         <button>Reset</button>
     </section>
 
