changed html code to set a default city

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <section>
-        <h1>Weather Report For</h1>
-        <h2 id= "cityDisplay">this city</h2>
+        <h1>☀️Weather Report For</h1>
+        <h2 id= "cityDisplay">New York</h2>
     </section>
 
     <section class="tempDefault">
@@ -32,8 +32,8 @@
 
     <section>
         <h2>Which city?</h2>
-        <label for="city">City Name</label>
-        <input placeholder= "Enter city name" name="city">
+        <label for="city">City</label>
+        <input value= "New York" name="city">
         <button>Reset</button>
     </section>
 
