input value is set for a city name

--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
         <div class="city bg_br">
             <h2>City Name</h2>
             <div class="card-body">
-                <input placeholder="City name"/>
+                <input id="get-city-name" placeholder="City name"/>
+                <button id="reset">reset</button>
             </div>
         </div>
 
         <div class="weather ">
             <h2>Weather Garden</h2>
-            <div class="weather_content ">
+            <div class="weather_content">
                 <div class="weather_sky">🌨❄️🌨🌨❄️❄️🌨❄️🌨❄️❄️🌨🌨</div>
                 <div class="weather_garden">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</div>
             </div>
